Added Date Range filter
